// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`physiology trajectory — golden files > ards (ARDS Patient) > 'APRV — optimal recruitment' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 30,
      "meanPressure": 25.4,
      "measuredRR": 22,
      "measuredTV": 420,
      "minuteVentilation": 9.2,
      "peakPressure": 28,
      "plateauPressure": 23.8,
    },
    "t": 5,
    "vitals": {
      "dbp": 59.7,
      "etco2": 44.7,
      "hr": 110.8,
      "sbp": 99.5,
      "spo2": 88.1,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 30,
      "meanPressure": 25.5,
      "measuredRR": 22,
      "measuredTV": 420,
      "minuteVentilation": 9.2,
      "peakPressure": 28,
      "plateauPressure": 23.8,
    },
    "t": 15,
    "vitals": {
      "dbp": 59.3,
      "etco2": 44.2,
      "hr": 112.2,
      "sbp": 98.7,
      "spo2": 88.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 30,
      "meanPressure": 25.5,
      "measuredRR": 22,
      "measuredTV": 420,
      "minuteVentilation": 9.2,
      "peakPressure": 28,
      "plateauPressure": 23.8,
    },
    "t": 30,
    "vitals": {
      "dbp": 58.7,
      "etco2": 43.5,
      "hr": 113.8,
      "sbp": 97.7,
      "spo2": 88.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 30,
      "meanPressure": 25.5,
      "measuredRR": 22,
      "measuredTV": 420,
      "minuteVentilation": 9.2,
      "peakPressure": 28,
      "plateauPressure": 23.8,
    },
    "t": 60,
    "vitals": {
      "dbp": 58,
      "etco2": 42.2,
      "hr": 116,
      "sbp": 96.4,
      "spo2": 88.9,
    },
  },
]
`;

exports[`physiology trajectory — golden files > ards (ARDS Patient) > 'PCV — pInsp 15 under-pressurised' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 15,
      "meanPressure": 20.5,
      "measuredRR": 22,
      "measuredTV": 225,
      "minuteVentilation": 4.9,
      "peakPressure": 29,
      "plateauPressure": 24.7,
    },
    "t": 5,
    "vitals": {
      "dbp": 60.2,
      "etco2": 44.9,
      "hr": 110.8,
      "sbp": 100.3,
      "spo2": 88.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 15,
      "meanPressure": 20.7,
      "measuredRR": 22,
      "measuredTV": 225,
      "minuteVentilation": 4.9,
      "peakPressure": 29,
      "plateauPressure": 24.7,
    },
    "t": 15,
    "vitals": {
      "dbp": 60.4,
      "etco2": 44.7,
      "hr": 112.2,
      "sbp": 100.9,
      "spo2": 88.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 15,
      "meanPressure": 19.6,
      "measuredRR": 22,
      "measuredTV": 225,
      "minuteVentilation": 4.9,
      "peakPressure": 29,
      "plateauPressure": 24.7,
    },
    "t": 30,
    "vitals": {
      "dbp": 60.8,
      "etco2": 44.4,
      "hr": 113.9,
      "sbp": 101.6,
      "spo2": 89.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 15,
      "meanPressure": 19.9,
      "measuredRR": 22,
      "measuredTV": 225,
      "minuteVentilation": 4.9,
      "peakPressure": 29,
      "plateauPressure": 24.7,
    },
    "t": 60,
    "vitals": {
      "dbp": 61.2,
      "etco2": 44,
      "hr": 116.1,
      "sbp": 102.4,
      "spo2": 90.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > ards (ARDS Patient) > 'PCV — pInsp 25 for stiff lungs' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 15,
      "meanPressure": 25,
      "measuredRR": 22,
      "measuredTV": 375,
      "minuteVentilation": 8.2,
      "peakPressure": 39,
      "plateauPressure": 33.2,
    },
    "t": 5,
    "vitals": {
      "dbp": 60,
      "etco2": 44.8,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 88.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 15,
      "meanPressure": 25.1,
      "measuredRR": 22,
      "measuredTV": 375,
      "minuteVentilation": 8.2,
      "peakPressure": 39,
      "plateauPressure": 33.2,
    },
    "t": 15,
    "vitals": {
      "dbp": 60.1,
      "etco2": 44.4,
      "hr": 110.4,
      "sbp": 100.2,
      "spo2": 88.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 15,
      "meanPressure": 23.4,
      "measuredRR": 22,
      "measuredTV": 375,
      "minuteVentilation": 8.2,
      "peakPressure": 39,
      "plateauPressure": 33.2,
    },
    "t": 30,
    "vitals": {
      "dbp": 60.2,
      "etco2": 43.9,
      "hr": 110.8,
      "sbp": 100.3,
      "spo2": 89.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 15,
      "meanPressure": 23.9,
      "measuredRR": 22,
      "measuredTV": 375,
      "minuteVentilation": 8.2,
      "peakPressure": 39,
      "plateauPressure": 33.2,
    },
    "t": 60,
    "vitals": {
      "dbp": 60.2,
      "etco2": 43,
      "hr": 111.2,
      "sbp": 100.5,
      "spo2": 90.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > ards (ARDS Patient) > 'SIMV — ARDS mandatory low VT' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 13,
      "meanPressure": 20.7,
      "measuredRR": 22,
      "measuredTV": 350,
      "minuteVentilation": 7.7,
      "peakPressure": 40,
      "plateauPressure": 34,
    },
    "t": 5,
    "vitals": {
      "dbp": 60,
      "etco2": 44.9,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 88.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 13,
      "meanPressure": 20.8,
      "measuredRR": 22,
      "measuredTV": 347,
      "minuteVentilation": 7.6,
      "peakPressure": 39.9,
      "plateauPressure": 33.9,
    },
    "t": 15,
    "vitals": {
      "dbp": 60,
      "etco2": 44.5,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 88.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 13,
      "meanPressure": 20.4,
      "measuredRR": 22,
      "measuredTV": 348,
      "minuteVentilation": 7.7,
      "peakPressure": 40,
      "plateauPressure": 34,
    },
    "t": 30,
    "vitals": {
      "dbp": 60,
      "etco2": 43.9,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 89.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 13,
      "meanPressure": 20.6,
      "measuredRR": 22,
      "measuredTV": 348,
      "minuteVentilation": 7.7,
      "peakPressure": 40,
      "plateauPressure": 34,
    },
    "t": 60,
    "vitals": {
      "dbp": 60,
      "etco2": 43,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 90.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > ards (ARDS Patient) > 'VCV — ARDSNet low VT' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 13,
      "meanPressure": 20.7,
      "measuredRR": 22,
      "measuredTV": 350,
      "minuteVentilation": 7.7,
      "peakPressure": 40,
      "plateauPressure": 34,
    },
    "t": 5,
    "vitals": {
      "dbp": 60,
      "etco2": 44.9,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 88.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 13,
      "meanPressure": 20.8,
      "measuredRR": 22,
      "measuredTV": 347,
      "minuteVentilation": 7.6,
      "peakPressure": 39.9,
      "plateauPressure": 33.9,
    },
    "t": 15,
    "vitals": {
      "dbp": 60,
      "etco2": 44.5,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 88.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 13,
      "meanPressure": 20.4,
      "measuredRR": 22,
      "measuredTV": 348,
      "minuteVentilation": 7.7,
      "peakPressure": 40,
      "plateauPressure": 34,
    },
    "t": 30,
    "vitals": {
      "dbp": 60,
      "etco2": 43.9,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 89.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 13,
      "meanPressure": 20.6,
      "measuredRR": 22,
      "measuredTV": 348,
      "minuteVentilation": 7.7,
      "peakPressure": 40,
      "plateauPressure": 34,
    },
    "t": 60,
    "vitals": {
      "dbp": 60,
      "etco2": 43,
      "hr": 110.2,
      "sbp": 100.1,
      "spo2": 90.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > bronchospasm (Severe Bronchospasm) > 'VCV — low rate long e-time' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 21,
      "meanPressure": 10.9,
      "measuredRR": 10,
      "measuredTV": 463,
      "minuteVentilation": 4.6,
      "peakPressure": 26.7,
      "plateauPressure": 22.7,
    },
    "t": 5,
    "vitals": {
      "dbp": 85,
      "etco2": 49.7,
      "hr": 115.2,
      "sbp": 135.1,
      "spo2": 91.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 21,
      "meanPressure": 10.8,
      "measuredRR": 10,
      "measuredTV": 463,
      "minuteVentilation": 4.6,
      "peakPressure": 26.7,
      "plateauPressure": 22.7,
    },
    "t": 15,
    "vitals": {
      "dbp": 85.1,
      "etco2": 49.1,
      "hr": 115.4,
      "sbp": 135.2,
      "spo2": 91.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 21,
      "meanPressure": 8.1,
      "measuredRR": 10,
      "measuredTV": 463,
      "minuteVentilation": 4.6,
      "peakPressure": 26.7,
      "plateauPressure": 22.7,
    },
    "t": 30,
    "vitals": {
      "dbp": 85.1,
      "etco2": 48.1,
      "hr": 115.6,
      "sbp": 135.2,
      "spo2": 92.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 21,
      "meanPressure": 8.5,
      "measuredRR": 10,
      "measuredTV": 463,
      "minuteVentilation": 4.6,
      "peakPressure": 26.7,
      "plateauPressure": 22.7,
    },
    "t": 60,
    "vitals": {
      "dbp": 85.2,
      "etco2": 46.5,
      "hr": 115.9,
      "sbp": 135.4,
      "spo2": 93.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > healthy (Healthy Adult (70kg)) > 'VCV — protective baseline' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 41,
      "meanPressure": 7.6,
      "measuredRR": 14,
      "measuredTV": 490,
      "minuteVentilation": 6.9,
      "peakPressure": 17.1,
      "plateauPressure": 14.5,
    },
    "t": 5,
    "vitals": {
      "dbp": 75,
      "etco2": 38.1,
      "hr": 72.2,
      "sbp": 120.1,
      "spo2": 99,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 40,
      "meanPressure": 7.1,
      "measuredRR": 14,
      "measuredTV": 484,
      "minuteVentilation": 6.8,
      "peakPressure": 17.1,
      "plateauPressure": 14.5,
    },
    "t": 15,
    "vitals": {
      "dbp": 75,
      "etco2": 38.1,
      "hr": 72.2,
      "sbp": 120.1,
      "spo2": 99.1,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 40,
      "meanPressure": 7,
      "measuredRR": 14,
      "measuredTV": 483,
      "minuteVentilation": 6.8,
      "peakPressure": 17.1,
      "plateauPressure": 14.5,
    },
    "t": 30,
    "vitals": {
      "dbp": 75,
      "etco2": 38,
      "hr": 72.2,
      "sbp": 120.1,
      "spo2": 99.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 40,
      "meanPressure": 7,
      "measuredRR": 14,
      "measuredTV": 483,
      "minuteVentilation": 6.8,
      "peakPressure": 17.1,
      "plateauPressure": 14.5,
    },
    "t": 60,
    "vitals": {
      "dbp": 75,
      "etco2": 38,
      "hr": 72.2,
      "sbp": 120.1,
      "spo2": 99.4,
    },
  },
]
`;

exports[`physiology trajectory — golden files > obese (Morbidly Obese (140kg)) > 'PCV — pInsp 22 obesity' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 24,
      "meanPressure": 20.5,
      "measuredRR": 16,
      "measuredTV": 530,
      "minuteVentilation": 8.5,
      "peakPressure": 32,
      "plateauPressure": 27.2,
    },
    "t": 5,
    "vitals": {
      "dbp": 90.1,
      "etco2": 41.9,
      "hr": 88.6,
      "sbp": 145.2,
      "spo2": 94.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 24,
      "meanPressure": 15.7,
      "measuredRR": 16,
      "measuredTV": 530,
      "minuteVentilation": 8.5,
      "peakPressure": 32,
      "plateauPressure": 27.2,
    },
    "t": 15,
    "vitals": {
      "dbp": 90.3,
      "etco2": 41.7,
      "hr": 89.6,
      "sbp": 145.6,
      "spo2": 94.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 24,
      "meanPressure": 15.7,
      "measuredRR": 16,
      "measuredTV": 530,
      "minuteVentilation": 8.5,
      "peakPressure": 32,
      "plateauPressure": 27.2,
    },
    "t": 30,
    "vitals": {
      "dbp": 90.6,
      "etco2": 41.4,
      "hr": 90.9,
      "sbp": 146.1,
      "spo2": 95.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 24,
      "meanPressure": 15.7,
      "measuredRR": 16,
      "measuredTV": 530,
      "minuteVentilation": 8.5,
      "peakPressure": 32,
      "plateauPressure": 27.2,
    },
    "t": 60,
    "vitals": {
      "dbp": 90.9,
      "etco2": 40.8,
      "hr": 92.5,
      "sbp": 146.8,
      "spo2": 96.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > obese (Morbidly Obese (140kg)) > 'VCV — high-PEEP obesity' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 19,
      "meanPressure": 16.7,
      "measuredRR": 16,
      "measuredTV": 420,
      "minuteVentilation": 6.7,
      "peakPressure": 31.7,
      "plateauPressure": 26.9,
    },
    "t": 5,
    "vitals": {
      "dbp": 90,
      "etco2": 41.9,
      "hr": 88.2,
      "sbp": 145.1,
      "spo2": 94.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 19,
      "meanPressure": 13.7,
      "measuredRR": 16,
      "measuredTV": 416,
      "minuteVentilation": 6.7,
      "peakPressure": 31.7,
      "plateauPressure": 26.9,
    },
    "t": 15,
    "vitals": {
      "dbp": 90,
      "etco2": 41.7,
      "hr": 88.2,
      "sbp": 145.1,
      "spo2": 94.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 19,
      "meanPressure": 13.7,
      "measuredRR": 16,
      "measuredTV": 416,
      "minuteVentilation": 6.7,
      "peakPressure": 31.7,
      "plateauPressure": 26.9,
    },
    "t": 30,
    "vitals": {
      "dbp": 90,
      "etco2": 41.4,
      "hr": 88.1,
      "sbp": 145.1,
      "spo2": 95.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 19,
      "meanPressure": 13.7,
      "measuredRR": 16,
      "measuredTV": 416,
      "minuteVentilation": 6.7,
      "peakPressure": 31.7,
      "plateauPressure": 26.9,
    },
    "t": 60,
    "vitals": {
      "dbp": 90,
      "etco2": 40.9,
      "hr": 88.1,
      "sbp": 145,
      "spo2": 96.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > restrictive (Restrictive Lung Disease) > 'VCV — small VT higher rate' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 19,
      "meanPressure": 10.8,
      "measuredRR": 20,
      "measuredTV": 350,
      "minuteVentilation": 7,
      "peakPressure": 24.9,
      "plateauPressure": 21.2,
    },
    "t": 5,
    "vitals": {
      "dbp": 78,
      "etco2": 40,
      "hr": 92.2,
      "sbp": 125.1,
      "spo2": 93.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 19,
      "meanPressure": 9.4,
      "measuredRR": 20,
      "measuredTV": 350,
      "minuteVentilation": 7,
      "peakPressure": 24.9,
      "plateauPressure": 21.2,
    },
    "t": 15,
    "vitals": {
      "dbp": 78,
      "etco2": 39.9,
      "hr": 92.1,
      "sbp": 125.1,
      "spo2": 93.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 19,
      "meanPressure": 9.1,
      "measuredRR": 20,
      "measuredTV": 350,
      "minuteVentilation": 7,
      "peakPressure": 24.9,
      "plateauPressure": 21.2,
    },
    "t": 30,
    "vitals": {
      "dbp": 78,
      "etco2": 39.7,
      "hr": 92.1,
      "sbp": 125,
      "spo2": 94.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 19,
      "meanPressure": 9.5,
      "measuredRR": 20,
      "measuredTV": 350,
      "minuteVentilation": 7,
      "peakPressure": 24.9,
      "plateauPressure": 21.2,
    },
    "t": 60,
    "vitals": {
      "dbp": 78,
      "etco2": 39.5,
      "hr": 92.1,
      "sbp": 125,
      "spo2": 95.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > spontaneous (Spontaneously Breathing (Inadequate)) > 'PSV — pressure support' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 39,
      "meanPressure": 7.9,
      "measuredRR": 8,
      "measuredTV": 473,
      "minuteVentilation": 3.8,
      "peakPressure": 17,
      "plateauPressure": 14.5,
    },
    "t": 5,
    "vitals": {
      "dbp": 65.2,
      "etco2": 54.7,
      "hr": 105.9,
      "sbp": 110.4,
      "spo2": 89.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 40,
      "meanPressure": 5,
      "measuredRR": 8,
      "measuredTV": 2,
      "minuteVentilation": 0,
      "peakPressure": 5,
      "plateauPressure": 4.3,
    },
    "t": 15,
    "vitals": {
      "dbp": 65.6,
      "etco2": 54.7,
      "hr": 108.2,
      "sbp": 111.3,
      "spo2": 89.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 40,
      "meanPressure": 5,
      "measuredRR": 8,
      "measuredTV": 1,
      "minuteVentilation": 0,
      "peakPressure": 5,
      "plateauPressure": 4.3,
    },
    "t": 30,
    "vitals": {
      "dbp": 66.1,
      "etco2": 54.4,
      "hr": 110.7,
      "sbp": 112.3,
      "spo2": 90.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 40,
      "meanPressure": 5,
      "measuredRR": 8,
      "measuredTV": 2,
      "minuteVentilation": 0,
      "peakPressure": 5,
      "plateauPressure": 4.3,
    },
    "t": 60,
    "vitals": {
      "dbp": 66.8,
      "etco2": 53.9,
      "hr": 114,
      "sbp": 113.6,
      "spo2": 91.6,
    },
  },
]
`;

exports[`physiology trajectory — golden files > spontaneous (Spontaneously Breathing (Inadequate)) > 'SIMV — mandatory VT + PS 12' 1`] = `
[
  {
    "measured": {
      "dynamicCompliance": 33,
      "meanPressure": 7.1,
      "measuredRR": 14,
      "measuredTV": 450,
      "minuteVentilation": 6.3,
      "peakPressure": 18.7,
      "plateauPressure": 15.9,
    },
    "t": 5,
    "vitals": {
      "dbp": 65,
      "etco2": 54.6,
      "hr": 105.2,
      "sbp": 110.1,
      "spo2": 89.3,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 40,
      "meanPressure": 5.2,
      "measuredRR": 14,
      "measuredTV": 147,
      "minuteVentilation": 2.1,
      "peakPressure": 8.7,
      "plateauPressure": 7.4,
    },
    "t": 15,
    "vitals": {
      "dbp": 65.2,
      "etco2": 54,
      "hr": 105.9,
      "sbp": 110.4,
      "spo2": 89.8,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 32,
      "meanPressure": 7.2,
      "measuredRR": 14,
      "measuredTV": 444,
      "minuteVentilation": 6.2,
      "peakPressure": 18.8,
      "plateauPressure": 16,
    },
    "t": 30,
    "vitals": {
      "dbp": 65.2,
      "etco2": 52.7,
      "hr": 106,
      "sbp": 110.4,
      "spo2": 90.5,
    },
  },
  {
    "measured": {
      "dynamicCompliance": 40,
      "meanPressure": 5,
      "measuredRR": 14,
      "measuredTV": 0,
      "minuteVentilation": 0,
      "peakPressure": 5,
      "plateauPressure": 4.3,
    },
    "t": 60,
    "vitals": {
      "dbp": 65.6,
      "etco2": 51.5,
      "hr": 108.2,
      "sbp": 111.3,
      "spo2": 91.6,
    },
  },
]
`;
